--- a/posts.html
+++ b/posts.html
@@ -8,19 +8,19 @@
 		<link href="./_app/immutable/assets/0.BzGg8Zsg.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/PostsList.Tz4oZZWM.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.N0NZ3jtB.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CMGXA1u8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CZ9WQ9xH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.JEVIt5xV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D-7Gp6oJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/otQIyl1s.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.2xqqMraO.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D-OaNwMW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C1FmrZbK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/IHki7fMi.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Bo2X1QKA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BSW2fs-M.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DIGKfedX.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.CJgurPPg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DsIMAyUj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CSQCRlkc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DleIlgAS.js"><title>Sepehr | Posts</title><!-- HEAD_svelte-1j9di4b_START --><!-- HEAD_svelte-1j9di4b_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DSjeogXN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CL75PLJ0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CI2nrt5-.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.BS_uZLDG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/COUQV4NK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BuwHxaQn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DHaVEcM5.js"><title>Sepehr | Posts</title><!-- HEAD_svelte-1j9di4b_START --><!-- HEAD_svelte-1j9di4b_END -->
     <script>
       let darkModeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)')
 
@@ -64,15 +64,15 @@
 			
 			<script>
 				{
-					__sveltekit_11eka0h = {
+					__sveltekit_1p9lopk = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CMGXA1u8.js"),
-						import("./_app/immutable/entry/app.2xqqMraO.js")
+						import("./_app/immutable/entry/start.JEVIt5xV.js"),
+						import("./_app/immutable/entry/app.D-OaNwMW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
