--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     
 		<link href="./_app/immutable/assets/0.BzGg8Zsg.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/PostsList.Tz4oZZWM.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CMGXA1u8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CZ9WQ9xH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.JEVIt5xV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D-7Gp6oJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/otQIyl1s.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.2xqqMraO.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D-OaNwMW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C1FmrZbK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/IHki7fMi.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Bo2X1QKA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BSW2fs-M.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DIGKfedX.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DTmI0n47.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CSQCRlkc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DleIlgAS.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CXDWa28Y.js"><title>Sepehr</title><!-- HEAD_svelte-1cbbdsg_START --><meta name="description" content="I’m Sepehr, a software engineer from Guelph, Ontario, currently based in Seattle, WA.
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DSjeogXN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CL75PLJ0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CI2nrt5-.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.C-3KRnDS.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BuwHxaQn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DHaVEcM5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DbqOwt13.js"><title>Sepehr</title><!-- HEAD_svelte-1cbbdsg_START --><meta name="description" content="I’m Sepehr, a software engineer from Guelph, Ontario, currently based in Seattle, WA.
 
 Presently I work on core infra @ Meta. I did some graduate research in computer vision and
 image processing. I like Rust.
@@ -63,7 +63,7 @@ image processing. I like Rust.
   </head>
 
   <body class="h-full bg-white dark:bg-zinc-900 text-zinc-600 dark:text-zinc-400">
-    <div>  <div class="flex flex-col min-h-screen "><div class="flex flex-col flex-grow w-full px-4 py-2"><header class="flex items-center justify-between w-full max-w-2xl py-4 mx-auto lg:pb-8"><a class="text-lg font-bold sm:text-2xl !text-transparent bg-clip-text bg-gradient-to-r from-teal-500 to-teal-600 dark:to-teal-400" href="/">Sepehr</a> <button type="button" role="switch" aria-label="Toggle Dark Mode" aria-checked="true" class="w-5 h-5 sm:h-8 sm:w-8 sm:p-1"><svg xmlns="https://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="hidden text-zinc-500 dark:block"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg> <svg xmlns="https://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="block text-zinc-400 dark:hidden"><path fill-rule="evenodd" d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" clip-rule="evenodd"></path></svg></button></header> <main class="flex flex-col flex-grow w-full mx-auto max-w-2xl"> <div class="flex flex-col flex-grow gap-8 pb-16"> <section class="flex flex-col items-center gap-16 pt-8 pb-16"><div class="flex flex-col items-center w-full gap-6 rounded-lg"><img src="https://picsum.photos/id/203/250/250" alt="Sepehr" class="mx-auto rounded-full w-36 h-36 ring-2 ring-zinc-200 dark:ring-zinc-700"> <div class="flex gap-6">  <a href="https://github.com/robot-love/robot-love.github.io" class="group" aria-label="Follow on GitHub" data-svelte-h="svelte-4v3kv4"><svg viewBox="0 0 24 24" aria-hidden="true" class="w-6 h-6 transition fill-zinc-500 group-hover:fill-zinc-600 dark:fill-zinc-400 dark:group-hover:fill-zinc-300"><path fillrule="evenodd" cliprule="evenodd" d="M12 2C6.475 2 2 6.588 2 12.253c0 4.537 2.862 8.369 6.838 9.727.5.09.687-.218.687-.487 0-.243-.013-1.05-.013-1.91C7 20.059 6.35 18.957 6.15 18.38c-.113-.295-.6-1.205-1.025-1.448-.35-.192-.85-.667-.013-.68.788-.012 1.35.744 1.538 1.051.9 1.551 2.338 1.116 2.912.846.088-.666.35-1.115.638-1.371-2.225-.256-4.55-1.14-4.55-5.062 0-1.115.387-2.038 1.025-2.756-.1-.256-.45-1.307.1-2.717 0 0 .837-.269 2.75 1.051.8-.23 1.65-.346 2.5-.346.85 0 1.7.115 2.5.346 1.912-1.333 2.75-1.05 2.75-1.05.55 1.409.2 2.46.1 2.716.637.718 1.025 1.628 1.025 2.756 0 3.934-2.337 4.806-4.562 5.062.362.32.675.936.675 1.897 0 1.371-.013 2.473-.013 2.82 0 .268.188.589.688.486a10.039 10.039 0 0 0 4.932-3.74A10.447 10.447 0 0 0 22 12.253C22 6.588 17.525 2 12 2Z"></path></svg></a> </div> <p class="text-base text-zinc-600 dark:text-zinc-400">I’m Sepehr, a software engineer from Guelph, Ontario, currently based in Seattle, WA.
+    <div>  <div class="flex flex-col min-h-screen "><div class="flex flex-col flex-grow w-full px-4 py-2"><header class="flex items-center justify-between w-full max-w-2xl py-4 mx-auto lg:pb-8"><a class="text-lg font-bold sm:text-2xl !text-transparent bg-clip-text bg-gradient-to-r from-teal-500 to-teal-600 dark:to-teal-400" href="/">Sepehr</a> <button type="button" role="switch" aria-label="Toggle Dark Mode" aria-checked="true" class="w-5 h-5 sm:h-8 sm:w-8 sm:p-1"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="hidden text-zinc-500 dark:block"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="block text-zinc-400 dark:hidden"><path fill-rule="evenodd" d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" clip-rule="evenodd"></path></svg></button></header> <main class="flex flex-col flex-grow w-full mx-auto max-w-2xl"> <div class="flex flex-col flex-grow gap-8 pb-16"> <section class="flex flex-col items-center gap-16 pt-8 pb-16"><div class="flex flex-col items-center w-full gap-6 rounded-lg"><img src="/robotlove.png" alt="Sepehr" class="mx-auto rounded-full w-36 h-36 ring-2 ring-zinc-200 dark:ring-zinc-700"> <div class="flex gap-6">  <a href="https://github.com/robot-love/robot-love.github.io" class="group" aria-label="Follow on GitHub" data-svelte-h="svelte-4v3kv4"><svg viewBox="0 0 24 24" aria-hidden="true" class="w-6 h-6 transition fill-zinc-500 group-hover:fill-zinc-600 dark:fill-zinc-400 dark:group-hover:fill-zinc-300"><path fillrule="evenodd" cliprule="evenodd" d="M12 2C6.475 2 2 6.588 2 12.253c0 4.537 2.862 8.369 6.838 9.727.5.09.687-.218.687-.487 0-.243-.013-1.05-.013-1.91C7 20.059 6.35 18.957 6.15 18.38c-.113-.295-.6-1.205-1.025-1.448-.35-.192-.85-.667-.013-.68.788-.012 1.35.744 1.538 1.051.9 1.551 2.338 1.116 2.912.846.088-.666.35-1.115.638-1.371-2.225-.256-4.55-1.14-4.55-5.062 0-1.115.387-2.038 1.025-2.756-.1-.256-.45-1.307.1-2.717 0 0 .837-.269 2.75 1.051.8-.23 1.65-.346 2.5-.346.85 0 1.7.115 2.5.346 1.912-1.333 2.75-1.05 2.75-1.05.55 1.409.2 2.46.1 2.716.637.718 1.025 1.628 1.025 2.756 0 3.934-2.337 4.806-4.562 5.062.362.32.675.936.675 1.897 0 1.371-.013 2.473-.013 2.82 0 .268.188.589.688.486a10.039 10.039 0 0 0 4.932-3.74A10.447 10.447 0 0 0 22 12.253C22 6.588 17.525 2 12 2Z"></path></svg></a> </div> <p class="text-base text-zinc-600 dark:text-zinc-400">I’m Sepehr, a software engineer from Guelph, Ontario, currently based in Seattle, WA.
 
 Presently I work on core infra @ Meta. I did some graduate research in computer vision and
 image processing. I like Rust.
@@ -71,15 +71,15 @@ image processing. I like Rust.
 			
 			<script>
 				{
-					__sveltekit_11eka0h = {
+					__sveltekit_1p9lopk = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CMGXA1u8.js"),
-						import("./_app/immutable/entry/app.2xqqMraO.js")
+						import("./_app/immutable/entry/start.JEVIt5xV.js"),
+						import("./_app/immutable/entry/app.D-OaNwMW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
